sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:7: error: value foreach is not a member of Int
		for (j<-i){
                        ^